static/custom.css
/* Custom CSS */
/* .hidden p {
    display: none;
}
*/
.icon {
    width: 1em;
    height: 1em;
    /* Font-Awesome recommends -.125em vertical alignment (https://fontawesome.com/how-to-use/on-the-web/advanced/svg-symbols)
       However, I mostly find myself using the following which looks better for some icons: */
    vertical-align: -.140em;
    fill: initial;
}

body, button, input, select, textarea {
    font-family: Cormorant Garamond, sans-serif;
    font-size: 1.2em;
}

.title, h1, h2, h3, h4, h5, h6 {
    font-family: Cormorant Garamond, sans-serif;
    font-size: 1.2em;
}

.entry-cover figcaption {
	text-align: right;
	margin: .25em auto 0;
	padding: 0;
    padding-right: 3.2em;
}

